Refactoring internal structure to use dependency injection for DAOs and service classes. Storing definitions of tokens and corresponding wallet providers in the database to later enable different implementations to be loaded and referred to